--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 250px;
   transition: all ease-in-out 0.5s;
   z-index: 9997;
   transition: all 0.5s;
@@ -71,6 +71,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px auto;
   display: block;
   width: 120px;
+  height: 200px;
   border: 8px solid #2c2f3f;
 }
 #header .profile h1 {
